apollo-federation/tests/composition/snapshots/main__composition__compose_type_merging__field_types_merges_subtypes_within_lists.snap
---
source: apollo-federation/tests/composition/compose_type_merging.rs
expression: print_sdl(api_schema.schema())
---
type A implements I {
  a: Int
  b: Int
}

type B implements I {
  a: Int
  c: Int
}

interface I {
  a: Int
}

type Query {
  T: T!
}

type T {
  id: ID!
  f: [I]
}
